Fixed the spacing issue between the prices in mobile view.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,14 @@
+@font-face {
+    font-family: "Fraunces";
+    src: url("https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+
+    font-display: swap;
+}
+
 body {
     background-color: #f2eae3;
     margin: 1em;
-    padding: 0;
+    padding: 1em;
 }
 
 /* Desktop Version */
@@ -33,7 +40,7 @@ body {
 .product{
     color: #a2a3a8;
     letter-spacing: 0.2em;
-    font-size: 14px;
+    font-size: clamp(14px, 1.5vw, 16px);
     text-transform: uppercase;
     margin-bottom: 0.5em;
 
@@ -54,7 +61,7 @@ body {
 }
 
 h1{
-    font-size: 2.5em;
+    font-size: clamp(1.5em, 3vw, 2.5em);
     margin: 0;
     padding-top: 0.5em;
     padding-bottom: 0.5em;
@@ -70,7 +77,7 @@ h1{
 
 .productDescription{
     color: #a2a3a8;
-    font-size: 14px;
+    font-size: clamp(14px, 2vw, 16px);
 
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
@@ -87,7 +94,7 @@ h1{
 
 .currentPrice{
     color: hsl(158, 36%, 37%);
-    font-size: 2em;
+    font-size: clamp(1.5em, 3vw, 2em);
     justify-self: left;
 
     font-family: "Fraunces", serif;
@@ -100,9 +107,10 @@ h1{
 
 .originalPrice{
     text-decoration: line-through;
-    color: gray;
+    color: Grey;
     justify-self: left;
     padding-left: 0.5em;
+    font-size: clamp(1em, 2vw, 1.2em);
 }
 
 .btnAddToCart {
@@ -176,5 +184,16 @@ button:active {
         border-radius: 10px 10px 0px 0px;
         width: 100%;
         height: fit-content;
+    }
+
+    .price{
+    display: grid;
+    grid-template-columns: 40% 60%;
+    grid-template-rows: auto;
+    place-items: center;
+}
+
+    .originalPrice{
+        padding-left: 0em;
     }
 }
